# edges

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
src/: border.rs  events.rs  main.rs  renderer.rs  settings.rs  window_manager.rs
src/ffi/: cf.rs  cg.rs  mod.rs  skylight.rs
