[package]
name = "edges"
version = "0.1.0"
edition = "2021"
authors = ["Pablo Punk"]
description = "Lightweight window borders for macOS"
license = "MIT"
repository = "https://github.com/pablopunk/edges"
keywords = ["macos", "window-manager", "borders", "tiling"]
categories = ["os::macos-apis"]

[dependencies]
# Core macOS bindings
core-foundation = "0.10"
core-graphics = "0.24"
foreign-types = "0.5"

# Signal handling (replaces tokio for Ctrl-C)
ctrlc = "3.4"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
libc = "0.2.183"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[package.metadata]
# Build configuration for macOS private frameworks

[target.'cfg(target_os = "macos")'.dependencies]

[profile.dev.build-override]
opt-level = 3
